syntax="proto3";
package pb;
import "user.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/zjr71163356/simplebank/pb";



message loginUserRequest  {
    string username=1;
    string password=2;
}

message loginUserResponse  {
    string access_token=1;
    string refresh_token=2;
    google.protobuf.Timestamp access_token_expires_at=3;
    google.protobuf.Timestamp refresh_token_expires_at=4;
    User user=5;

}
