syntax="proto3";
package pb;
import "user.proto";
option go_package = "github.com/zjr71163356/simplebank/pb";

message UpdateUserRequest  {
    string username=1;
    optional string password=2;
    optional string full_name=3;
    optional string email=4;
    optional string password_changed_at=5;
}

message UpdateUserResponse   {
    User user =1;
}