syntax="proto3";
import "rpc_create_user.proto";
import "rpc_login_user.proto";

package pb;
option go_package = "github.com/zjr71163356/simplebank/pb";

service SimpleBank{
    rpc CreateUser(CreateUserParams) returns(CreateUserResponse){}
    rpc LoginUser(loginUserRequest) returns(loginUserResponse){}
}


